# pathTracer

./: .gitignore  CMakeLists.txt  README.md
cases/bedroom/: bedroom.xml
cases/cornell-box/: cornell-box.xml
cases/veach-mis/: veach-mis.xml
src/: bvhnode.cpp  bvhnode.h  bvhtree.cpp  bvhtree.h  camera.cpp  camera.h  jpgio.h  light.cpp  light.h  main.cpp  myGrid.cpp  myGrid.h  object.cpp  object.h  scene.cpp  scene.h  stringhandle.cpp  stringhandle.h  vector.cpp  vector.h  writejpg.h
